tests/str_var_byvalue_bad.stderr
tests/str_var_byvalue_bad.sl:3:14: error: SL2004: type mismatch: cannot use string constant of type &str as str
tests/str_var_byvalue_bad.sl:3:14: hint: SL2004: change type to &str or *str
