tests/str_var_byvalue_bad.sl
// Verifies string variable byvalue is rejected.
fn main() {
	var s str = "hello"
}
